--- a/static/sass/components/_pre.scss
+++ b/static/sass/components/_pre.scss
@@ -2,4 +2,5 @@ pre {
   background-color: _palette(bg-input);
   cursor: text;
   font-size: 0.8em;
+  overflow: hidden;
 }
